windows are mobile friendly

--- a/src/app/windows/common-styles.css
+++ b/src/app/windows/common-styles.css
@@ -1,3 +1,18 @@
+.title {
+    font-family: Segoe-UI;
+    color: #FFFFFF;
+    font-size: 114pt;
+    text-align: center;
+}
+
+.content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 90%;
+    gap: 2.5rem;
+}
+
 .projects-container {
     flex-basis: 45%;
     display: flex;
@@ -8,7 +23,7 @@
 }
 
 
-.project-fluff {
+.fluff {
     text-align: center;
     font-size: 19pt;
 }
@@ -87,4 +102,31 @@
 @media(max-width: 1073px) {}
 
 /* mobile */
-@media(max-width: 815px) {}
+@media(max-width: 815px) {
+    .title {
+        font-size: 40pt;
+    }
+
+    .fluff {
+        font-size: 16pt;
+    }
+
+    .project {
+        gap: 4rem;
+    }
+
+    .desc-and-media {
+        flex-direction: column;
+        font-size: 15pt;
+    }
+
+    .desc-and-media>#desc {
+        flex-basis: unset;
+    }
+
+    .desc-and-media>#media {
+        flex-basis: unset;
+        width: 320px;
+        height: 40vh;
+    }
+}
