--- a/src/app/windows/graphics-engine/graphics-engine.component.html
+++ b/src/app/windows/graphics-engine/graphics-engine.component.html
@@ -1,6 +1,6 @@
-<p class="title">Computer Graphics</p>
-<div class="computer-graphics-container">
-    <div class="project-fluff">
+<p class="title" style="font-family: Bitstream;">Computer Graphics</p>
+<div class="content-container bitsream-font">
+    <div class="fluff">
         <p>I took on the challenge of building my own physics simulation engine from scratch. This means writing the shaders that tell the
             GPU what to render. Progressing each object forward in time, based on real life physics. Efficiently resolving
             collisions of objects and deciding the response. This has really tought me more about the C++ language and how computer graphics are done.
