--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -1,6 +1,6 @@
 <p class="title">Web Design</p>
 <div class="content-container">
-    <div class="process">
+    <div class="fluff">
         <p>
             A good website is one that is built before any HTML is written. I have experience in working in UI/UX
             applications such as Adobe XD and Figma.
@@ -8,36 +8,53 @@
             on it
         </p>
     </div>
-    <div class="showcase">
-        <!-- <div class="expandable-card" style="background-image: url(../../../assets/images/Web-Design/hippy_news_preview.png);">
-            <div class="toggle-expand"></div>
-            <div class="expandable-title">Hippy/Alternative News Website</div>
-        </div> -->
-        <div class="card-container">
-            <div class="text-container">
-                <div style="background-image: url(../../../assets/images/Web-Design/hippy_news_preview.png);"></div>
-            </div>
-            <div class="image-container">
-                <div class="">Hippy/Alternative News Website</div>
-            </div>
-        </div>
-        <div class="card-container reverse-card">
-            <div class="text-container">
-                <div style="background-image: url(../../../assets/images/Web-Design/tournements_preview.png);"></div>
-            </div>
-            <div class="image-container">
-                <div class="">Waterpolo Team Management Wireframe</div>
+
+    <div class="divider"></div>
+    <div class="projects-container">
+        <div class="projects">
+            <div class="project">
+                <p>Hippy/Alternative News Website</p>
+                <div class="desc-and-media">
+                    <div id="desc">
+                        <p>
+                            An example showing my proccess of frameworking a website
+                        </p>
+                    </div>
+                    <div id="media">
+                        <video playsinline loop muted autoplay height="100%" controls>
+                            <source src="../../../assets/videos/hippy_Frameworking.mp4" type="video/mp4">
+                            Error Message
+                        </video>
+                    </div>
+                </div>
+                <div class="desc-and-media reverse">
+                    <div id="desc">
+                        <p>
+                            After making the framwework of a website, i begin with the colours.
+                            Making the general theme of the website
+                        </p>
+                    </div>
+                    <div id="media">
+                        <video playsinline loop muted autoplay height="100%" controls>
+                            <source src="../../../assets/videos/hippy_Theming.mp4" type="video/mp4">
+                            Error Message
+                        </video>
+                    </div>
+                </div>
+                <div class="desc-and-media">
+                    <div id="desc">
+                        <p>
+                            And finally, before any html is writting, I go through iterations that had previously not been thought about
+                        </p>
+                    </div>
+                    <div id="media">
+                        <video playsinline loop muted autoplay height="100%" controls>
+                            <source src="../../../assets/videos/hippy_Finalising.mp4" type="video/mp4">
+                            Error Message
+                        </video>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<modal-container id="hippyNewsModal" [modalDisplay]="showHippyModal" (close)="toggleHippyModal()">
-    <div class="hippyModalContainer">
-        <div class="hippy-image-container"></div>
-        <div class="hippy-text-container">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet, voluptatum neque. Error illum provident ab
-            amet odit!
-        </div>
-    </div>
-</modal-container>
