--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -1,6 +1,6 @@
 <p class="title">Web Development</p>
-<div class="dev-container">
-    <div class="project-fluff">
+<div class="content-container">
+    <div class="fluff">
         <p>It has been 4 years since I rented my first web server. I didnt know how to code HTML,
             javascript or how to serve a file
             In Hindsight it was'nt the best purchasing desicion for the skillset I had at the time. Since then i
@@ -23,10 +23,9 @@
             </div>
         </div>
     </div>
-    <div class="projects"></div>
 
-    <div class="project-fluff">
-        <p class="project-fluff">
+    <div class="fluff">
+        <p>
             I'm not stuck in the past though, where there is no need for self-hosting a service, a cloud service will
             do.
             I have used Google Firebase to handle things such as user authentication and distributed messanging, and
