--- a/src/app/windows/graphics-engine/graphics-engine.component.css
+++ b/src/app/windows/graphics-engine/graphics-engine.component.css
@@ -1,20 +1,3 @@
-.computer-graphics-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 90%;
-    gap: 2.5rem;
+.bitsream-font {
     font-family: Bitstream;
-    color: white;
-}
-
-.title {
-    font-family: Bitstream;
-    color: #FFFFFF;
-    font-size: 100pt;
-}
-
-.project-fluff {
-    text-align: center;
-    font-size: 19pt;
 }
