--- a/src/app/windows/web-dev/web-dev.component.css
+++ b/src/app/windows/web-dev/web-dev.component.css
@@ -1,18 +1,3 @@
-.title {
-    font-family: Segoe-UI;
-    color: #FFFFFF;
-    font-size: 114pt;
-    text-align: center;
-}
-
-.dev-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 90%;
-    gap: 2.5rem;
-}
-
 .skillset {
     flex-basis: 35%;
     display: flex;
@@ -79,3 +64,15 @@
     background: white;
 }
 
+/* mobile */
+@media(max-width: 815px) {
+    .skillset {
+        gap: unset;
+        justify-content: space-around;
+    }
+    .skill-display {
+        flex-basis: 46%;
+        font-size: 9pt;
+        margin-bottom: 1.3rem;
+    }
+}
