--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,10 +1,15 @@
 <div [@isInView]="isInView ? 'inView' : 'notInView'" class="window-container" (@isInView.start)="stateChange()">
     <div class="fake-border" [style]="'background-color: ' + borderColor + ';'"></div>
     <div [class]="'window-content container ' + backgroundClass">
-        <div class="move-prompt top-prompt" (click)="goUp()">GO UP</div>
-        <div class="move-prompt bottom-prompt" (click)="goDown()">GO DOWN</div>
+        <div class="move-prompt top-prompt" (click)="goUp()">
+            <img src="../../assets/svgs/expand_less_FILL0_wght400_GRAD0_opsz48.svg" />
+        </div>
+        <div class="move-prompt bottom-prompt" (click)="goDown()">
+            <img src="../../assets/svgs/expand_more_FILL0_wght400_GRAD0_opsz48.svg" />
+        </div>
     </div>
-    <div [id]="name + '-container'" [@content]="contentState" [class]="'window-content container ' + (scrolling ? '' : ' disable-scrolling')">
+    <div [id]="name + '-container'" [@content]="contentState"
+        [class]="'window-content container ' + (scrolling ? '' : ' disable-scrolling')">
         <ng-content></ng-content>
     </div>
 </div>
