improved web dev window

--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -13,7 +13,75 @@
     <div class="projects-container">
         <div class="projects">
             <div class="project">
+                <p>Iota Soluition Configurator</p>
+                <div class="fluff">
+                    <p>
+                        A Software solution for configuring a parts of a product that are required to pass tests and be compatible
+                    </p>
+                </div>
+                <div class="desc-and-media">
+                    <div id="desc">
+                        <p>
+                            Initial Sketch going from framework to theming
+                        </p>
+                    </div>
+                    <div id="media">
+                        <video playsinline loop muted autoplay height="100%" controls>
+                            <source src="../../../assets/videos/initial sketch.mp4" type="video/mp4">
+                            Error Message
+                        </video>
+                    </div>
+                </div>
+                <div class="desc-and-media reverse">
+                    <div id="desc">
+                        <p>
+                            Here is the first iteration running. It looks rough compared to the design because what is
+                            most importtant is to get feedback on the design. Reducing wasted effort
+                        </p>
+                    </div>
+                    <div id="media">
+                        <video playsinline loop muted autoplay height="100%" controls>
+                            <source src="../../../assets/videos/initial sketch running.mp4" type="video/mp4">
+                            Error Message
+                        </video>
+                    </div>
+                </div>
+                <div class="desc-and-media">
+                    <div id="desc">
+                        <p>
+                            After getting feedback I go back the the sketchboard and use the feedback given to design a
+                            better product
+                        </p>
+                    </div>
+                    <div id="media">
+                        <video playsinline loop muted autoplay height="100%" controls>
+                            <source src="../../../assets/videos/iteration 1.mp4" type="video/mp4">
+                            Error Message
+                        </video>
+                    </div>
+                </div>
+                <div class="desc-and-media reverse">
+                    <div id="desc">
+                        <p>
+                            And here we a see a more polished version of the software running.
+                        </p>
+                    </div>
+                    <div id="media">
+                        <video playsinline loop muted autoplay height="100%" controls>
+                            <source src="../../../assets/videos/iteration 1 running.mp4" type="video/mp4">
+                            Error Message
+                        </video>
+                    </div>
+                </div>
+            </div>
+            <div class="divider"></div>
+            <div class="project">
                 <p>Hippy/Alternative News Website</p>
+                <div class="fluff">
+                    <p>
+                        The Design proccess of a news Website, this project was for University
+                    </p>
+                </div>
                 <div class="desc-and-media">
                     <div id="desc">
                         <p>
@@ -44,7 +112,8 @@
                 <div class="desc-and-media">
                     <div id="desc">
                         <p>
-                            And finally, before any html is writting, I go through iterations that had previously not been thought about
+                            And finally, before any html is writting, I go through iterations that had previously not
+                            been thought about
                         </p>
                     </div>
                     <div id="media">
