Web Design text changes

--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -16,7 +16,8 @@
                 <p>Iota Soluition Configurator</p>
                 <div class="fluff">
                     <p>
-                        A Software solution for configuring a parts of a product that are required to pass tests and be compatible
+                        A Software solution for configuring a parts of a product that are required to pass tests and be compatible.
+                        Project was written using the Angular Framework for frontend, and a mix of Rust tide and NodeJS for the backend 
                     </p>
                 </div>
                 <div class="desc-and-media">
@@ -76,10 +77,10 @@
             </div>
             <div class="divider"></div>
             <div class="project">
-                <p>Hippy/Alternative News Website</p>
+                <p>Portfolio Website</p>
                 <div class="fluff">
                     <p>
-                        The Design proccess of a news Website, this project was for University
+                        The process of designing this website, the below elements were made with the use of Adobe XD, Adobe Photoshop and Adobe After Effects
                     </p>
                 </div>
                 <div class="desc-and-media">
