half implemented cards

--- a/src/app/windows/multimedia/multimedia-card/multimedia-card.component.html
+++ b/src/app/windows/multimedia/multimedia-card/multimedia-card.component.html
@@ -1,16 +1,12 @@
-<div class="flex-row" style="position: relative; height: 600px; width: 500px;">
-    <div class="flex-row center" style="width: 97%; height: 90%; background-color: #4F9761; z-index: 1;">
-        <div style="width: 95%; height: 95%; background-color: #006018; position: relative;">
-            <div
-                style="background-color: #11461E; width: 97%; height: 97%; position: absolute; bottom: 0px; right: 0px;">
+<div class="flex-row container">
+    <div class="flex-row center content-container">
+        <div class="frame">
+            <div class="frame-background">
+                <carousel></carousel>
             </div>
-            <div class="bottom-right-inner-shadow"
-                style="width: 99%; height: 99%; position: absolute; bottom: 0px; right: 0px;"></div>
+            <div class="frame-shadow bottom-right-inner-shadow"></div>
         </div>
     </div>
-    <div class="bottom-right-shadow"
-        style="width: 94%; height: 87%; position: absolute; top: 3%; left: 3%; z-index: 1;"></div>
-    <div class="flex-column align-center"
-        style="position: absolute; top: 3%; left: 3%; width: 97%; height: 97%; background-color: #C1179C;">
-    </div>
+    <div class="bottom-right-shadow content-container-shadow"></div>
+    <div class="flex-column align-center content-underhang"></div>
 </div>
