--- a/src/app/windows/web-dev/web-dev.component.html
+++ b/src/app/windows/web-dev/web-dev.component.html
@@ -38,35 +38,17 @@
             <p>Projects</p>
             <div class="project">
                 <p>Property Scraper</p>
-                <div class="desc-and-media">
-                    <div id="desc">
-                        <p>Midway through 2022 I need a place to stay near university.
-                            I wanted to be alerted of new properties on the market for renting.
-                            I then build an app that would alert me of such properties.
-                        </p>
-                    </div>
-                    <div id="media">
-                        <video playsinline loop muted autoplay height="100%" controls>
-                            <source src="../../../assets/videos/property_mobile.mp4" type="video/mp4">
-                            Error Message
-                        </video>
-                    </div>
-                </div>
-                <div class="desc-and-media">
-                    <div id="desc">
-                        <p>Architecture/Stack:
-                            The project is built with to be cross platform with the ionic framework.
-                            A self wrote python script is used to collect properties from the web and store them.
-                            Another python script is used to send notifications to notification subscribers (me).
-                            Google's Firebase Cloud Messaging service is used to deliver payloads to subscribed devices.
-                        </p>
-                    </div>
-                    <div id="media">
-                        <div class="center-image"
-                            style="background-image: url(../../../assets/images/property\ scrape\ Infrastructure\ diagram.png); height: 100%;">
-                        </div>
-                    </div>
-                </div>
+                <general-card text="Midway through 2022 I need a place to stay near university.
+            I wanted to be alerted of new properties on the market for renting.
+            I then built an app that would alert me of such properties."
+                    [media]="[{mediaURL: 'assets/videos/property_mobile.mp4', image: false}]">
+                </general-card>
+                <general-card text="Architecture/Stack:
+                The project is built with to be cross platform with the ionic framework.
+                A self wrote python script is used to collect properties from the web and store them.
+                Another python script is used to send notifications to notification subscribers (me).
+                Google's Firebase Cloud Messaging service is used to deliver payloads to subscribed devices."
+                    [media]="[{mediaURL: 'assets/images/property\ scrape\ Infrastructure\ diagram.png', image: true}]" reverse></general-card>
             </div>
             <div class="divider"></div>
             <div class="project">
@@ -122,8 +104,10 @@
                         <p>Architecture/Stack:
                             This project makes heavy use of Amazon Web Services. First the source code
                             is compiled to the build files, and these build files are sent to an s3 bucket.
-                            The DNS is configured on Route 53 to fetch content from the Cloudfront CDN, which gets its content from the s3 bucket.
-                            Using git hooks, I have automated the process of invalidating the cache once new content is uploaded to the s3 bucket.
+                            The DNS is configured on Route 53 to fetch content from the Cloudfront CDN, which gets its
+                            content from the s3 bucket.
+                            Using git hooks, I have automated the process of invalidating the cache once new content is
+                            uploaded to the s3 bucket.
                         </p>
                     </div>
                     <div id="media">
