--- a/src/app/windows/window-card/window-card.component.sass
+++ b/src/app/windows/window-card/window-card.component.sass
@@ -1,3 +1,9 @@
+$default-shadow-color: #4c4f5d
+$default-platform-color: rgb(153 151 215)
+
+.card-container
+    gap: 50px
+
 .media-container
     width: 600px
     height: 500px
@@ -6,12 +12,12 @@
     .media-platform
         width: 97%
         height: 97%
-        background-color: rgb(90, 90, 243)
+        background-color: $default-platform-color
 
     .media-shadow
         width: 97%
         height: 97%
-        background-color: navy
+        background-color: $default-shadow-color
         position: absolute
         bottom: 0px
         right: 0px
@@ -19,15 +25,32 @@
 
 .text-platform
     max-width: 350px
-    background-color: rgb(90, 90, 243)
+    background-color: $default-platform-color
     padding: 1.6rem
     font-size: 19pt
 
 .text-shadow
     width: 200%
     height: 97%
-    background-color: navy
+    background-color: $default-shadow-color
     position: absolute
     bottom: -10px
     right: 0px
     z-index: -1
+
+@media(max-width: 815px)
+    .media-container
+        width: 380px
+        height: 360px
+
+    .card-container
+        flex-direction: column !important
+        max-width: 77vw
+
+    .text-shadow
+        height: 170%
+        width: 97%
+
+    .text-platform
+        // overide 'reverse' flag behaviour
+        text-align: left !important 
