--- a/src/app/windows/window-card/window-card.component.sass
+++ b/src/app/windows/window-card/window-card.component.sass
@@ -40,8 +40,8 @@ $default-platform-color: rgb(153 151 215)
 
 @media(max-width: 815px)
     .media-container
-        width: 380px
-        height: 360px
+        width: 380px !important
+        height: 360px !important
 
     .card-container
         flex-direction: column !important
