added fullscreen to window card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<fullscreen-viewer></fullscreen-viewer>
 <sidebar id="sidebar" [windows]="windows" (scrollToSection)="scrollTo($event)"></sidebar>
 <div class="topbar">
   <div>
