--- a/src/app/windows/window-card/window-card.component.sass
+++ b/src/app/windows/window-card/window-card.component.sass
@@ -10,6 +10,7 @@ $default-platform-color: rgb(153 151 215)
     position: relative
 
     .media-platform
+        position: relative
         width: 97%
         height: 97%
         background-color: $default-platform-color
