--- a/src/app/windows/window-card/window-card.component.html
+++ b/src/app/windows/window-card/window-card.component.html
@@ -14,6 +14,9 @@
                     </video>
                 </div>
             </div>
+            <!--clean up this fillscreentoggle-->
+            <div style="background-color: rgba(255, 0, 0, 0.762); width: 45px; height: 45px; position: absolute; right: 0px; top: 0px; cursor: pointer;"
+                (click)="toggleFullscreen()"></div>
         </div>
         <div #media_shadow class="media-shadow"></div>
     </div>
