using directive to play video on entering viewport

--- a/src/app/windows/graphics-engine/graphics-engine.component.html
+++ b/src/app/windows/graphics-engine/graphics-engine.component.html
@@ -17,7 +17,7 @@
                     </p>
                 </div>
                 <div id="media">
-                    <video playsinline loop muted autoplay height="100%" controls>
+                    <video playOnViewport playsinline loop muted height="100%" controls>
                         <source src="../../../assets/videos/collisions_1.mp4" type="video/mp4">
                         Error Message
                     </video>
