--- a/src/app/windows/web-design/web-design.component.html
+++ b/src/app/windows/web-design/web-design.component.html
@@ -27,7 +27,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%" controls>
+                        <video playOnViewport playsinline loop muted height="100%" controls>
                             <source src="../../../assets/videos/initial sketch.mp4" type="video/mp4">
                             Error Message
                         </video>
@@ -41,7 +41,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%" controls>
+                        <video playOnViewport playsinline loop muted height="100%" controls>
                             <source src="../../../assets/videos/initial sketch running.mp4" type="video/mp4">
                             Error Message
                         </video>
@@ -55,7 +55,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%" controls>
+                        <video playOnViewport playsinline loop muted height="100%" controls>
                             <source src="../../../assets/videos/iteration 1.mp4" type="video/mp4">
                             Error Message
                         </video>
@@ -68,7 +68,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%" controls>
+                        <video playOnViewport playsinline loop muted height="100%" controls>
                             <source src="../../../assets/videos/iteration 1 running.mp4" type="video/mp4">
                             Error Message
                         </video>
@@ -90,7 +90,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%" controls>
+                        <video playOnViewport playsinline loop muted height="100%" controls>
                             <source src="../../../assets/videos/hippy_Frameworking.mp4" type="video/mp4">
                             Error Message
                         </video>
@@ -104,7 +104,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%" controls>
+                        <video playOnViewport playsinline loop muted height="100%" controls>
                             <source src="../../../assets/videos/hippy_Theming.mp4" type="video/mp4">
                             Error Message
                         </video>
@@ -118,7 +118,7 @@
                         </p>
                     </div>
                     <div id="media">
-                        <video playsinline loop muted autoplay height="100%" controls>
+                        <video playOnViewport playsinline loop muted height="100%" controls>
                             <source src="../../../assets/videos/hippy_Finalising.mp4" type="video/mp4">
                             Error Message
                         </video>
